# storage/api-docs/api-docs.json
@@ -149,21 +149,21 @@
                         }
                     },
                     {
-                        "name": "genre",
-                        "in": "query",
-                        "description": "genreカラム",
-                        "required": false,
-                        "schema": {
-                            "type": "string"
-                        }
-                    },
-                    {
                         "name": "description",
                         "in": "query",
                         "description": "descriptionカラム",
                         "required": false,
                         "schema": {
                             "type": "string"
+                        }
+                    },
+                    {
+                        "name": "type_genre_id",
+                        "in": "query",
+                        "description": "type_genre_idカラム",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
                         }
                     }
                 ],
